tests/errors/phpdoc_indent.php
<?php

declare(strict_types=1);

class IndentCheck
{
/**
 *
 */
    public function get(): void
    {
    }
}
